--- a/multisla/src/main/resources/templates/carbuild/register.html
+++ b/multisla/src/main/resources/templates/carbuild/register.html
@@ -262,7 +262,7 @@ $(document).ready(function(){
                <div class="col-sm-offset-2 col-sm-3">
                   <hr>
                   <p>계정이 있으신가요?</p>
-                   <a class="btn btn-default btn-user btn-block" href="login" name="login">로그인하러가기</a><br>
+                   <a class="btn btn-default btn-user btn-block" href="login">로그인하러가기</a><br>
                </div>
           </div>
       </div>
