--- a/multisla/src/main/resources/templates/carbuild/login.html
+++ b/multisla/src/main/resources/templates/carbuild/login.html
@@ -1,3 +1,4 @@
+<html xmlns:th="http://www.thymeleaf.org">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -84,10 +85,4 @@ $(document).ready(function(){
 	</div>
     <div class="col-sm-4"></div>  
 </div>
-
-
-
-
-
-
-
+</html>
