--- a/multisla/src/main/resources/templates/login.html
+++ b/multisla/src/main/resources/templates/login.html
@@ -1,3 +1,4 @@
+<html xmlns:th="http://www.thymeleaf.org">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -66,7 +67,7 @@
 	      		<div class="col-sm-offset-2 col-sm-3">
 	      			<hr>
 	      			<p>계정이 없다면?</p>
-	       			<a class="btn btn-default btn-user btn-block" href="register" name="register">계정생성하기</a><br>
+	       			<a class="btn btn-default btn-user btn-block" href="register">계정생성하기</a><br>
 	      		</div>
 
 	    	</div>
@@ -76,7 +77,7 @@
     <div class="col-sm-4">
 	</div>  
 </div>
-
+</html>
 
 
 
