--- a/multisla/src/main/resources/templates/orders.html
+++ b/multisla/src/main/resources/templates/orders.html
@@ -62,12 +62,15 @@
         $(document).ready(function(){
         	$('#namespan').hide();
         	$('#phonespan').hide();
-        	
+        	$('#addrspan').hide();
         	$('#shipname').keyup(function(){
         		$('#namespan').hide();
         	});
         	$('#shipphone').keyup(function(){
         		$('#phonespan').hide();
+        	});
+        	$('#shipaddr').keyup(function(){
+        		$('#addrspan').hide();
         	});
        
         	
